extension_tests/valid/for/nestedForTest.wacc
#Test for nested for loops

begin
    for (int i = 0; i < 10; i = i + 1) do
        for (int j = 0; j < 10; j = j + 1) do
            println i + j
        done
    done
end
