extension_tests/invalid/syntaxErr/for/forNoDone.wacc
# for missing closing done

# Output
# #syntax_eeror#

# Exit:
# 100

# Program:

begin
    for (inti = 0; i < 10; i+1) do
        skip
end
